--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html"><span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Home</a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="about.html"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>
-						About</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="team.html"><span class="mbri-target mbr-iconfont mbr-iconfont-btn"></span>
-						Team</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="event.html"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
-                        Events</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="contact.html"><span class="mbri-help mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="pages/about.html"><span class="mbri-rocket mbr-iconfont mbr-iconfont-btn"></span>
+						About</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="pages/team.html"><span class="mbri-target mbr-iconfont mbr-iconfont-btn"></span>
+						Team</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="pages/event.html"><span class="mbri-star mbr-iconfont mbr-iconfont-btn"></span>
+                        Events</a></li><li class="nav-item"><a class="nav-link link text-white display-4" href="pages/contact.html"><span class="mbri-help mbr-iconfont mbr-iconfont-btn"></span>
                         Contact</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="javascript:void(0)" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-link mbr-iconfont mbr-iconfont-btn"></span>Join</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="https://www.facebook.com/iic.psitcoe/" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span>Facebook</a><a class="text-white dropdown-item display-4" href="https://www.instagram.com/iic.psitcoe/" aria-expanded="false" target="_blank"><span class="socicon socicon-instagram mbr-iconfont mbr-iconfont-btn"></span>Instagram</a><a class="text-white dropdown-item display-4" href="https://twitter.com/IICPSITcoe" aria-expanded="false" target="_blank"><span class="socicon socicon-twitter mbr-iconfont mbr-iconfont-btn"></span>Twitter</a><a class="text-white dropdown-item display-4" href="mailto:iic.psitcoe@gmail.com" aria-expanded="true"><span class="socicon socicon-outlook mbr-iconfont mbr-iconfont-btn"></span>Email</a></div></li></ul>
             
         </div>
